Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-96170

WASM: data URI scheme does not work

XMLWordPrintable

    • WebAssembly
    • 70b9e0687b501f1602b0c4251cda50ddddfb6712 (qt/qtbase/dev) 70faf925efb661846b6ef3b10477336a9d139163 (qt/qtbase/6.2)

      Looks like data scheme handling in qnetworkaccessmanager.cpp has been ifdeffed out and the request does nothing.

      For example this does not work:

          Image {
              anchors.centerIn: parent
              source: "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAHElEQVQI12P4//8/w38GIAXDIBKE0DHxgljNBAAO9TXL0Y4OHwAAAABJRU5ErkJggg=="
          }
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lpotter Lorn Potter
            poikelin Joni Poikelin
            Votes:
            2 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes